--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Good Music</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Mariana Urcuqui">
+  <meta name="keywords" content="music, album, band">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -10,16 +12,16 @@
 	<header>
 		<div class="container">
 			<h1>
-				Wildly Expensive JPEGs
-				<span class="subheading">(Also known as NFTs)</span>
+				The Track
+				<span class="subheading"></span>
 			</h1>
 			
 			<!-- Site Navigation -->
 			<nav>
 				<ul>
-					<li><a href="#">Buy</a></li>
-					<li><a href="#">Resources</a></li>
-					<li><a href="#">Explore</a></li>
+					<li><a href="#">Subscribe</a></li>
+					<li><a href="#">News</a></li>
+					<li><a href="#">Contacts</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -27,34 +29,28 @@
 	<main>
 		<section>
 			<div class="container">
-				<h2>Meta-Pigeon Sneaker NFT: $33,000</h2>
-				<img  src="images/sneakers-purple.png" alt="Purple and silver sneakers" class="main-image">
-				<h3>At $33k, this NFT sneaker is super good value!</h3>
-				<p>If you've got lots of money and you're a bit silly, NFTs are a great way to pay for something that doesn't have any intrinsic value or even exist. Tech fashionistas are jumping on the NFT bandwagon and spending eye-watering sums of money on crypto images. Our advice: spend the weekend <a href="#">crafting an NFT</a>, and by this time next week, you'll be a millionaire.</p>
-				<a href="#" class="btn btn-dark">Buy NFTs</a>
-				<a href="#" class="btn btn-mid">More info</a>
-			</div>
-		</section>
-			
+				<h2>Some Artists That You Probably Don't Know But You Definitely Should</h2>
+				<!-- <img  src="images/sneakers-purple.png" alt="Purple and silver sneakers" class="main-image"> -->
+				<p>Discovering hidden gems in the world of music is always a thrilling journey, and today, we're excited to introduce you to three exceptionally talented but relatively unknown artists who are making waves with their unique sounds. While they may not have hit the mainstream charts just yet, their music is nothing short of extraordinary. Get ready to immerse yourself in the captivating melodies of Accusative, experience the soulful storytelling of Oh'laville, and groove to the infectious rhythms of Jose Alzate. These artists may be flying under the radar for now, but I believe they're poised for greatness.</p>
+    </section>
+    <section>
+      <div class="container">
+        <h3>告五人</h3>
+        <p>告五人 is a popular Chinese boy band. They gained significant recognition and popularity in China, particularly through their participation in the Chinese reality TV show "The Coming One." The group is known for its youthful energy, catchy songs, and vibrant performances. 告五人 had released several singles and albums, and they had a growing fan base in China. I really recommend you the album Somewhere in time, I love you.</p>
+      </div>
+    </section>
 		<section class="section-two">
 			<div class="container">
-				<h2>For the true Crypto-connoisseur</h2>
-				<div class="section-two-image-container">
-					<!-- NEW CODE -->
-					<div class="feature-item">
-						<img src="images/crypto-punk.jpg" alt="punk with blach hair and red and blue glasses" class="feature-image">
-						<p>Is $33k for sneakers too basic? No problem! This CryptoPunk is a steal at $6.6 million, making Bag #748 (right) a total bargain.</p>
-					</div>
-					<div class="feature-item">
-						<img src="images/bag.svg" alt="Seven items from a game listed in white on a black background" class="feature-image">
-						<p>That's not a screenshot. Those eight lines of white text on a black background is the actual NFT we're selling for $1.4 million.</p>
-					</div>			
-				</div>
-				<a href="#" class="btn btn-light">About Us</a>
-				<a href="#" class="btn btn-mid">Contact</a>
-				<p>Still not convinced? To be honest, nor are we. That's why we're selling them, not buying them.</p>
+				<h3>Oh'laville</h3>
+        <p>Oh'laville is an alternative rock and pop rock band originally from Bogotá, Colombia. The band is made up of four members: Mateo Paris on lead vocals and guitar, Andrés Toro on guitar and second vocals, Andrés Sierra on bass and also second vocals, and Luis M Lizarralde on drums. Their music is characterized by its rock melodies, folk music mixed with electronics and more modern elements, as well as by the fusion of different influences, from the most classic pop to alternative rock and electronic music. If you like to listen to music in spanish sometimes this band will blow your mind with their lyrics.</p>
 			</div>
 		</section>
+    <section>
+      <div class="container">
+        <h3>Jose Alzate</h3>
+        <p>Jose Alzate just released his debut EP "918282816". This young artist's compositions offer a unique departure from convention, delving into experimental soundscapes that invite listeners to traverse uncharted musical territory. Each track on this EP presents an abstract and immersive sonic experience, challenging conventional norms and pushing the boundaries of musical expression. Despite its experimental nature, [EP Title] manages to strike a balance between audacity and emotional resonance. [Musician's Name] crafts a hypnotic auditory landscape that may appeal to those seeking something distinct and thought-provoking. Whether you're an aficionado of experimental music or simply in search of something new, [Musician's Name]'s debut EP is worth exploring. It marks the beginning of what promises to be an intriguing artistic journey, prompting listeners to open their ears to fresh possibilities in the world of music.</p>
+      </div>
+    </section>
 			
 		<footer>
 			<p>&copy; 2022 FoolsGold.com</p>
